# python-xmlunittest

./: .gitignore  .readthedocs.yaml  .travis.yml  LICENSE  MANIFEST.in  README.md  README.rst  README.txt  pylintrc  pyproject.toml  requirements.txt  setup.py  test.py  tox.ini  xmlunittest.py
.github/workflows/: ci.yaml
doc/: conf.py  index.rst  xmlunittest.rst
docs/: Makefile  conf.py  xmlunittest.rst
src/: xmlunittest.py
